tests/variables/valid/exp_return_val.amu
main :: () -> s32 {
    a:s32;
    b:s32;
    a = b = 4;
    return a - b + 1;
}