tests/variables/invalid/syntax_err_bad_lvalue.amu
main :: () -> s32 {
    a:s32 = 2;
    a + 3 = 4;
    return a;
}